--- a/_config.yml.1
+++ b/_config.yml.1
@@ -37,17 +37,17 @@ defaults:
 paginate: 20
 
 #### Site
-title : gskeno
-tagline: 路漫漫其修远兮，吾将上下而求索
+title : Ivanzz
+tagline: 发上等愿，结中等缘，享下等福；择高处立，寻平处住，向宽处行
 assets: /assets
-baseurl:
+baseurl: 
 
 #### Language
 language: zh-CN   ## blog site languages: en, zh-CN, zh-TW, de
 
 #### Menu
 menu:
-  Home: /
+  Home: 
   Archive: /archives
   About: /about
 ## you can create `tags` and `categories` folders (I had created them already).
@@ -70,7 +70,7 @@ widgets:
 
 
 #### RSS
-rss: /atom.xml ## RSS address.
+rss: atom.xml ## RSS address.
 
 #### Image
 imglogo:
@@ -85,15 +85,15 @@ banner_img: #img/banner.jpg ## size:1920px*200px+. Banner Picture
 index:
   expand: true           ## default is unexpanding,so you can only see the short description of each post.
 
-close_aside: true  #close sidebar in post page if true 设置为true，进入文章详情页时，侧边栏自动展开可以显示目录
+close_aside: true  #close sidebar in post page if true
 mathjax: true      #enable mathjax if true
 share_to: true #enable share-to buttons if true
 
 #### Author information
 author:
-  name: gskeno      ## e.g. wuchong Author name
-  intro_line1:  "Hello ,I'm Larry Page in Google."    ## your introduction on the bottom of the page
-  intro_line2:  "This is my blog,believe it or not."  ## the 2nd line
+  name: ivan.L      ## e.g. wuchong Author name
+  intro_line1:  "纵使是咸鱼，"    ## your introduction on the bottom of the page
+  intro_line2:  "也定要做最咸的那条！"  ## the 2nd line
   weibo:      ## e.g. wuchong1014 or 2176287895 for http://weibo.com/2176287895
   weibo_verifier:  ## e.g. b3593ceb Your weibo-show widget verifier ,if you use weibo-show it is needed.
   tsina:      ## e.g. 2176287895  Your weibo ID,It will be used in share button.
@@ -108,17 +108,18 @@ author:
   stackoverflow:  ## e.g. 3222790 for http://stackoverflow.com/users/3222790/jark
 ## if you set them, the corresponding  share button will show on the footer
 
-#### Toc  show contents in article. show contents in aside.
+#### Toc
 toc:
-  aside: true
-  article: true
+  article: false   ## show contents in article.
+  aside: false     ## show contents in aside.
 ## you can set both of the value to true of neither of them.
 ## if you don't want display contents in a specified post,you can modify `front-matter` and add `toc: false`.
 
 #### Links
 links:
-  码农圈: https://coderq.com
-  Jark's Blog: http://wuchong.me
+  雷霄骅(leixiaohua1020)的专栏: https://blog.csdn.net/leixiaohua1020
+  nginx官网: http://nginx.org/en/
+  ceph官网: https://ceph.com/
 
 #### Comment
 disqus_shortname:     ## e.g. wuchong      your disqus short name.        website: http://disqus.com
