--- a/_posts/2018-03-07-forkjoin.md
+++ b/_posts/2018-03-07-forkjoin.md
@@ -74,7 +74,38 @@ public class CountTask extends RecursiveTask<Long> {
 ```
 最终却耗时4s，如下
 > begin 1 end 16 result 136 use time 4s
-## 使用说明
+## 错误使用分析
+上述错误示范中在`compute`方法中将大任务拆分为小任务时，使用的是如下方法
+```java
+    // 继续拆分任务
+    long mid = begin + (end - begin) / 2;
+    CountTask task1 = new CountTask(begin, mid);
+    CountTask task2 = new CountTask(mid + 1, end);
+    task1.fork(); 
+    task2.fork();
+    Long v1 = task1.join(); 
+    Long v2 = task2.join();
+```
+`fork`方法会异步将子任务塞入队列，而不会阻塞；但是`join`方法会阻塞，直到任务完成返回结果。所以上述的使用方式下，`当前线程会阻塞住，直到两个子任务完成才会继续执行`。如果两个子任务恰好
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 参考
@@ -83,3 +114,5 @@ public class CountTask extends RecursiveTask<Long> {
 2. [JUC源码分析-线程池篇（四）：ForkJoinPool - 1](https://www.jianshu.com/p/32a15ef2f1bf)
 3. [JUC源码分析-线程池篇（五）：ForkJoinPool - 2](https://www.jianshu.com/p/6a14d0b54b8d)
 4. [并发编程的艺术]()
+5. [Fork/Join框架（1）原理](https://segmentfault.com/a/1190000016781127)
+6. [ForkJoinPool大型图文现场](https://juejin.cn/post/6932632481526972430)
