--- a/_posts/2018-03-07-forkjoin.md
+++ b/_posts/2018-03-07-forkjoin.md
@@ -74,6 +74,10 @@ public class CountTask extends RecursiveTask<Long> {
 ```
 最终却耗时4s，如下
 > begin 1 end 16 result 136 use time 4s
+
+我们期望耗时2s才对，8个线程在`同一时刻`开始分别执行`1+2`,`3+4`, ..., `13+14`, `15+16`，2s内执行完毕，在这之后的汇总结果，并不怎么耗时，
+所以期望返回2s。
+
 ## 错误使用分析
 上述错误示范中在`compute`方法中将大任务拆分为小任务时，使用的是如下方法
 ```java
@@ -86,26 +90,35 @@ public class CountTask extends RecursiveTask<Long> {
     Long v1 = task1.join(); 
     Long v2 = task2.join();
 ```
-`fork`方法会异步将子任务塞入队列，而不会阻塞；但是`join`方法会阻塞，直到任务完成返回结果。所以上述的使用方式下，`当前线程会阻塞住，直到两个子任务完成才会继续执行`。如果两个子任务恰好
+
+`fork`方法会异步将子任务塞入队列，而不会阻塞；但是`join`方法会阻塞，直到任务完成返回结果。所以上述的使用方式下，`当前线程会阻塞住，直到两个子任务完成才会继续执行`。如果两个子任务恰好被两个空闲的线程`窃取`到，则这里并不会有性能影响;但是如果被两个不空闲的线程窃取到任务，则得不偿失了，当前线程此时无事可做，
+会浪费cpu。因此，这里应该强制当前线程执行任务。
+
+有两种优化方式
+方式1
+```java
+ task1.fork();
+ task2.fork();
+ task2.join(); // 强制当前线程执行子任务
+ task1.join();
+```
+方式2
+```java
+ invokeAll(task1, task2);  // 当前线程会直接执行task1，而其他task入队列
+ task1.join();
+ task2.join()
+```
+
+## 思考
+模拟测试时，如何知道其实现内部细节?
 
 
+- debug(debug在多线程并发下会影响测试)。
+- RecursiveTask子类中打印堆栈分析框架执行逻辑。
+- 利用反射工具，开启一个旁路线程实时打印框架中内部属性信息辅助分析。
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+**Tips**
+- 在不考虑工作线程窃取任务时，研究源码逻辑，可以设置`ForkJoinPool`并发度`parallelism`值为1, 这样只会创建一个线程
 
 
 参考
@@ -116,3 +129,6 @@ public class CountTask extends RecursiveTask<Long> {
 4. [并发编程的艺术]()
 5. [Fork/Join框架（1）原理](https://segmentfault.com/a/1190000016781127)
 6. [ForkJoinPool大型图文现场](https://juejin.cn/post/6932632481526972430)
+7. [docs ForKJoinTask](https://docs.oracle.com/javase/8/docs/api/java/util/concurrent/ForkJoinTask.html)
+8. [docs RecursiveTask](https://docs.oracle.com/javase/8/docs/api/java/util/concurrent/RecursiveTask.html)
+9. [ForkJoinPool Doug Lea论文](https://gee.cs.oswego.edu/dl/papers/fj.pdf)
