--- a/_posts/2018-03-07-forkjoin.md
+++ b/_posts/2018-03-07-forkjoin.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: ForkJoin怎么用
+title: 合理使用ForkJoin
 tags:
 - concurrent-programming
 categories: concurrent-programming
@@ -117,8 +117,36 @@ public class CountTask extends RecursiveTask<Long> {
 - RecursiveTask子类中打印堆栈分析框架执行逻辑。
 - 利用反射工具，开启一个旁路线程实时打印框架中内部属性信息辅助分析。
 
+---
+
 **Tips**
-- 在不考虑工作线程窃取任务时，研究源码逻辑，可以设置`ForkJoinPool`并发度`parallelism`值为1, 这样只会创建一个线程
+- 在不考虑工作线程窃取任务时，研究源码逻辑，可以设置`ForkJoinPool`并发度`parallelism`值为1, 这样只会创建一个线程。
+- 如果要探索窃取任务，可以设置`parallelism`值为2, 子任务执行时所在线程，与是否进行`debug`有很大关系。换言之，
+  debug行为会影响子任务执行时所归属线程(fork可能引起新线程的创建，debug状态下新线程创建并盗取其他线程的工作队列中
+  子任务的速度受到影响,新线程本可盗取到任务并执行不再发生)。
+
+----
+
+以执行`1+2+3....+16`为例，可以观察到以下现象(日志辅助分析)
+
+**现象1**
+
+执行`1+...+8`和`1+...4`和`1+...2`所处一个线程(假设是线程A)，则大概率下A fork产出的子任务放入到自己的工作队列中，未被其他线程盗取。
+则A线程进行尝试执行子任务`tryRemoveAndExec(ForkJoinTask<?> task)`。
+
+
+**现象2**
+
+执行`1+...+8`和`3+4`所处一个线程(假设是线程A)。则大概率是A分出的两个子任务`1+...+4`和`5+...+8`被其他工程线程所盗取, 假设线程B盗取了子任务
+`1+...4`, B执行过程中又分出了`1+2`和`3+4`两个子任务，放入B自己的工作队列，当A执行到子任务`1+...+4`时，发现子任务不存在，则找到对应的盗取者B，
+盗取B的子任务`3+4`。
+
+这个才是ForkJoin框架的魅力所在，我是一个大任务，拆分成多个子任务(本身打算自己慢慢处理)，其他线程来盗取我的子任务帮助我消化解决(偷盗者也要将子任务再进行切分的)。
+当我处理大任务时需要用到一个小任务的处理结果时，我找不到小任务了(被偷了)，则找到偷盗者，从它那里偷些小任务来解决，间接加快自己的子任务执行速度。
+
+其实就是一句话，`盗者，被盗也`。
+
+
 
 
 参考
@@ -132,3 +160,4 @@ public class CountTask extends RecursiveTask<Long> {
 7. [docs ForKJoinTask](https://docs.oracle.com/javase/8/docs/api/java/util/concurrent/ForkJoinTask.html)
 8. [docs RecursiveTask](https://docs.oracle.com/javase/8/docs/api/java/util/concurrent/RecursiveTask.html)
 9. [ForkJoinPool Doug Lea论文](https://gee.cs.oswego.edu/dl/papers/fj.pdf)
+10. [Java技术指南】「并发编程专题」Fork/Join框架基本使用和原理探究（基础篇）](https://www.v2as.com/article/719849be-d8d7-4574-801e-60d921351677)
