--- a/_posts/2018-03-07-forkjoin.md
+++ b/_posts/2018-03-07-forkjoin.md
@@ -7,7 +7,7 @@ categories: concurrent-programming
 description: 如何正确使用使用ForkJoin
 ---
 
-本文主要介绍java中`ForkJoin`的使用方式，避免踩坑。
+本文主要介绍java中`ForkJoin`的使用方式，避免踩坑，并尝试探索研究其工作原理和内部细节。
 
 <!-- more -->
 
