--- a/_posts/2022-03-08-eatapple.md
+++ b/_posts/2022-03-08-eatapple.md
@@ -24,3 +24,100 @@ A吃到苹果的概率也是B的两倍。</font>
 
 所以A最后吃到苹果的概率是\\(\frac{2}{3}\\),
 B最后吃到苹果的概率是\\(\frac{1}{3}\\)。
+
+
+## 烧蜡烛
+n只蜡烛，燃烧速度不均匀，但每只都正好用1小时烧完。请问：需要几只蜡烛确定15分钟的时间?
+
+<font color=red>提示</font>
+- 蜡烛可以两头同时点燃。
+
+## 装水1
+有一个5升和3升的杯子，和无限水，怎么量出4升?
+
+## 装水2
+有一个6升和5升的杯子，和无限水，怎么量出3升?
+
+## 装油
+又一个10L(满)油桶A，还有两个分别是7L B，3L C的空油桶，如何装出5L油？
+
+1. B装满, B倒入C 3L， C全部倒入A。B剩下4L
+2. B倒入C 3L， C全部倒入A。B剩下1L
+3. B倒入C 1L。C剩下1L
+4. B装满，B倒入C 2L，C满。B剩下5L
+
+## 抛硬币1
+连续抛硬币，直到连续出现2次正面朝上为止，期望的平均抛硬币次数?
+
+6次
+
+[知乎解释](https://www.zhihu.com/question/569128689)
+
+## 抛硬币2
+一万个人抛硬币，每个人同时抛两个，如果没有抛到两个正面朝上就继续，抛到两个正面朝上就停止，问这一万个
+人平均需要抛多少次?
+
+## 抛硬币3
+ABC三人循环扔硬币，正面获胜，求ABC获胜概率
+
+分析: 每一轮中，A获胜的概率为1/2, B获胜的概率为1/4，C获胜的概率为1/8。
+
+无限轮次后，ABC获胜的概率比值为4:2:1。
+所以ABC获胜的概率为4/7, 2/7, 1/7
+
+## 找到最重的球
+8个球，有一个最重，如何两次内找到该球?
+
+1. 天平两端各放置3个，天平平衡，则最重的球在剩下的2个中。
+2. 天平不平衡，最重的球在下沉的一端的3个球中。
+3. 将该3个球中的2个放置到天平的两端再次分析。
+
+## 赛马1
+25 匹马 5 条赛道，最快需要几场求出前 3 名？
+
+- 第一轮：5场
+- 第二轮：1场
+- 第三轮：1场
+  
+- [赛马知乎](https://zhuanlan.zhihu.com/p/560162323)
+
+## 赛马2
+64匹马,8个赛道,找出前4名最少比赛多少场?
+
+- 第一轮：8场
+- 第二轮：1场
+- 第三轮：1场或2场
+  
+- [知乎](https://zhuanlan.zhihu.com/p/398143738)
+
+## 上锁
+两个人在两侧想送东西给对岸，但是如果东西没上锁就会被船夫扔掉，a有一把锁和钥匙，b有另一把锁和钥匙，把货物从a运给b问怎么送  
+
+1. a先上一把锁运给b，让后b再上一把锁运给a，这时候a的收到的箱子就有ab两把锁
+2. a再把a的那把锁打开运过去，这时候b收到的锁上就只有b，那一把锁就可以打开了
+
+## 最短时间过桥
+漆黑的夜晚有四位还在外边的女生正在匆匆忙忙的回家，经过一座桥的时候四个女生都十分害怕。如果没有手电筒照路她们是无论如何也不敢过桥的。不巧四个人一共只带了一只手电筒，而且桥窄得只够让两个人同时通过。如果她们各自单独过桥的话，四人所需的时间分别是3、4、6、9分钟;而如果两人同时过桥，所需的时间就是走得比较慢的那个人单独行走所需的时间。你能设计一个方案，让这四人用最短的时间过桥吗?
+
+答案：假设这四人分别为甲、乙、丙、丁，过桥时间为3分钟、4分钟、6分钟、9分钟。甲、乙一起过桥用4分钟;乙留在桥那边，甲返回用3分钟;丙、丁一起过桥用9分钟;留在桥那边的乙返回用4分钟;甲、乙一起过桥用4分钟。一共是4+3+9+4+4=24分钟。　如果你把所有可能的方案都列举一遍的话，你会发现这是最快的方案了。其实不用列举对比，掌握了方法就可以马上设计出最佳方案。解决这个问题的思路是：让走得最慢的两个人同时过桥，这样他们花去的时间只是走得最慢的那个人花的时间，而走得次慢的那个人就不用另花时间过桥了。
+
+- [微信题解](https://mp.weixin.qq.com/s?__biz=MzU1Nzc3OTc4NA==&mid=2247491167&idx=5&sn=0be00f9c0f7c18a80d5c5fdb72e6acab&chksm=fc31c078cb46496e549b19ebc46b90964054d44439a9ddb923929e4e6549c7d4eed351f9108d&scene=27)
+
+
+## 分盐
+有7克、2克砝码各一个，天平一只，如何只用这些物品三次将140克的盐分成50、90克各一份？
+
+- [微软面试题](https://blog.csdn.net/weixin_51484780/article/details/119793643)
+
+## 跑道
+100米的跑道，5个运动员分别在离起点35，55，65，80，85位置，可以从左右两个方向出发，速度5m/s，相遇则需要沿相反方向走，问所有运动员最短离开跑道时间，最长需要花多长时间?
+
+## 打电话
+有两个城市，A 20万人， B 80万人，假设一天内两个城市会产生50万通电话，每通电话都是随机打的，请问跨城市打的有多少？
+
+- 任意一通电话，有1/5的概率是A城市人发起的，4/5的概率是B城市人发起的。
+- A城市人发起的电话，有1/5的概率是打向A城市人的，4/5的概率是打向B城市人的。
+
+## 参考
+
+- [水杯装水](https://blog.csdn.net/kevlnbb/article/details/100775013)
