--- a/_posts/2022-03-10-eatapple.md
+++ b/_posts/2022-03-10-eatapple.md
@@ -39,7 +39,7 @@ n只蜡烛，燃烧速度不均匀，但每只都正好用1小时烧完。请问
 有一个6升和5升的杯子，和无限水，怎么量出3升?
 
 ## 装油
-又一个10L(满)油桶A，还有两个分别是7L B，3L C的空油桶，如何装出5L油？
+有一个10L(满)油桶A，还有两个分别是7L B，3L C的空油桶，如何装出5L油？
 
 1. B装满, B倒入C 3L， C全部倒入A。B剩下4L
 2. B倒入C 3L， C全部倒入A。B剩下1L
@@ -117,6 +117,12 @@ ABC三人循环扔硬币，正面获胜，求ABC获胜概率
 
 - 任意一通电话，有1/5的概率是A城市人发起的，4/5的概率是B城市人发起的。
 - A城市人发起的电话，有1/5的概率是打向A城市人的，4/5的概率是打向B城市人的。
+
+## 生孩子
+
+[一个国家每个家庭会一直生孩子直到生出男孩为止，这个国家的男女比例是多少?](https://www.zhihu.com/question/65004078)
+
+1:1
 
 ## 参考
 
