--- a/_posts/2022-07-03-tcp.md
+++ b/_posts/2022-07-03-tcp.md
@@ -31,5 +31,13 @@ description: tcp报文讲起
   占2字节。假设A发送给B一个TCP报文，报文的***窗口*** 字段值是50，则表示`从报文首部中的确认号算起，
   A允许B发送50个字节数据量`。窗口值作为接收方让发送方设置其发送窗口的依据。
 
+- 选项
+  - `MSS`(Maximum Segement Size) 是一个TCP报文段中的`数据字段的最大长度`，所以MSS并不是整个TCP报文段的最大长度，
+    而是“TCP报文段长度 - TCP首部长度”。
+    
+    值太小，网络利用率就低；
+    
+    值太大，在IP层传输时就有可能要分解成多个短数据报片。在终点要把收到的各个短数据报片装配成原来的TCP报文段。
+    当传输出错时还要进行重传。这些也都会使开销增大。
 ## 参考
 1. [计算机网络 谢希仁]()
