--- a/_posts/2022-07-03-tcp.md
+++ b/_posts/2022-07-03-tcp.md
@@ -39,5 +39,16 @@ description: tcp报文讲起
     
     值太大，在IP层传输时就有可能要分解成多个短数据报片。在终点要把收到的各个短数据报片装配成原来的TCP报文段。
     当传输出错时还要进行重传。这些也都会使开销增大。
+
+    MSS选项由四个字节构成：选项类型代码为2（1字节），选项长度（1字节），选项数据（2字节）共计4字节。其中，选项数据的2字节代表了MSS的值。如果MSS选项数据为512，则表示该报文段的发送方可以处理的最大报文段长度为512字节（不包括TCP与IP协议头长度）。
+
+    下图表示的就是利用`nc`命令模拟服务端接口监听和客户端tcp连接服务端，所引起的tcp连接三次握手和断开四次挥手。
+    <img src="/assets/img/network/tcp2.jpg" width="650"/>
+
+    这里引出一个思考题，`IP层会进行分片(MTU机制)，为什么TCP层还需要MSS进行分片呢？`
+
+
 ## 参考
 1. [计算机网络 谢希仁]()
+2. [MSS百度百科](https://baike.baidu.com/item/MSS/3567802?fr=ge_ala)
+3. [小林coding tcp](https://www.xiaolincoding.com/network/3_tcp/tcp_interview.html)
