--- a/_posts/2022-07-03-tcp.md
+++ b/_posts/2022-07-03-tcp.md
@@ -47,8 +47,24 @@ description: tcp报文讲起
 
     这里引出一个思考题，`IP层会进行分片(MTU机制)，为什么TCP层还需要MSS进行分片呢？`
 
+  - `Window Scale` 窗口扩大选项占3字节。其中的`Shift count` 字段表示TCP头部定义的接收窗口大小可以再左移`Shift count`位进行扩大。
+    Window Scale 只在tcp连接`三次握手`时传递, 后续的业务报文不再传递该可选字段，但真实窗口的计算逻辑维持不变。
+
+    <img src="/assets/img/network/tcp3.png" width="650"/>
+
+  - `TimeStamps` 时间戳。
+    时间戳选项占10字节，其中最主要的字段时间戳值字段（4字节）和时间戳回送回答字段（4字节）。
+    
+    时间戳选项有以下两个功能：
+    
+    第一，`用来计算往返时间RTT`。发送方在发送报文段时把当前时钟的时间值放入时间戳字段，接收方在确认该报文段时把时间戳字段值复制到时间戳回送回答字段。因此，发送方在收到确认报文后，可以准确地计算出RTT来。
+    
+    第二，`用于处理TCP序号超过2^32的情况`，这又称为防止序号绕回 PAWS (Protect Against Wrapped Sequence numbers)。我们知道，序号只有32位，而每增加232个序号就会重复使用原来用过的序号。当使用高速网络时，在一次TCP连接的数据传送中序号很可能会被重复使用。例如，若用1Gb/s的速率发送报文段，则不到35秒钟数据字节的序号就会重复。为了使接收方能够把新的报文段和迟到很久的报文段区分开，可以在报文段中加上这种时间戳。
+
+    <img src="/assets/img/network/tcp4.png" width="650"/>
 
 ## 参考
 1. [计算机网络 谢希仁]()
 2. [MSS百度百科](https://baike.baidu.com/item/MSS/3567802?fr=ge_ala)
 3. [小林coding tcp](https://www.xiaolincoding.com/network/3_tcp/tcp_interview.html)
+4. [Wireshark网络分析就是这么简单]()
