--- a/_posts/2022-07-03-tcp.md
+++ b/_posts/2022-07-03-tcp.md
@@ -9,7 +9,7 @@ description: tcp报文讲起
 
 本文主要介绍tcp报文结构及其作用。
 
-## TCP报文结构
+# TCP报文结构
 <img src="/assets/img/tcp-data.jpg" width="650"/>
 
 - 序号
@@ -63,7 +63,38 @@ description: tcp报文讲起
 
     <img src="/assets/img/network/tcp4.png" width="650"/>
 
-## 参考
+# 拥塞控制
+目标
+- 区分流量控制与拥塞控制
+- 拥塞控制的几种常见算法
+
+## 慢开始和拥塞避免
+ <img src="/assets/img/network/tcp5.png" width="650"/>
+ 
+ 可以直观地看出，拥塞窗口是指数级快速增大，然后线性增大，直至达到网络拥塞。在达到网络拥塞时，发送者表现就是没有按时收到确认，发送者发生了`超时重传`。
+
+## 快重传和快恢复
+
+**快重传**
+
+快重传算法首先要求接收方每收到一个失序的报文段后就立即发出重复确认（为的是使发送方及早知道有报文段没有到达对方）而不要等待自己发送数据时才进行捎带确认。
+
+在下图所示的例子中，接收方收到了M1和M2后都分别发出了确认。现假定接收方没有收到M3但接着收到了M4。显然，接收方不能确认M4，因为M4是收到的失序报文段（按照顺序的M3还没有收到）。根据可靠传输原理，接收方可以什么都不做，也可以在适当时机发送一次对M2的确认。但按照快重传算法的规定，接收方应及时发送对 M2的重复确认，这样做可以让发送方及早知道报文段M3没有到达接收方。发送方接着发送M5和M6。接收方收到后，也还要再次发出对M2的重复确认。这样，`发送方共收到了接收方的四个对M2的确认，其中后三个都是重复确认`。
+
+快重传算法规定，`发送方只要一连收到三个重复确认就应当立即重传对方尚未收到的报文段M3，而不必继续等待为M3设置的重传计时器到期`。由于发送方能尽早重传未被确认的报文段，因此采用快重传后可以使整个网络的吞吐量提高约20%。
+
+ <img src="/assets/img/network/tcp6.png" width="450"/>
+
+---
+
+**快恢复**
+
+当`触发快重传`时，拥塞窗口骤降，`重新进入到拥塞避免`阶段。
+
+ <img src="/assets/img/network/tcp7.png" width="450"/>
+
+
+# 参考
 1. [计算机网络 谢希仁]()
 2. [MSS百度百科](https://baike.baidu.com/item/MSS/3567802?fr=ge_ala)
 3. [小林coding tcp](https://www.xiaolincoding.com/network/3_tcp/tcp_interview.html)
