--- a/_posts/2022-07-03-tcp.md
+++ b/_posts/2022-07-03-tcp.md
@@ -94,6 +94,21 @@ description: tcp报文讲起
  <img src="/assets/img/network/tcp7.png" width="450"/>
 
 
+# 延迟确认与Nagle算法
+延迟确认
+
+该策略的原理是这样的：如果`收到一个包之后暂时没什么数据要发给对方，那就延迟一段时间`（在Windows上默认为200毫秒）再确认。
+
+假如`在这段时间里恰好有数据要发送`，那确认信息和数据就可以在一个包里发出去了。
+
+延迟确认并没有直接提高性能，它只是减少了部分确认包，减轻了网络负担。
+
+---
+
+Negle算法(延迟发送)
+
+算法的原理是：在`发出去的数据还没有被确认之前`，假如又有小数据生成，那就把小数据收集起来，`凑满一个MSS或者等收到确认后`再发送。
+
 # 参考
 1. [计算机网络 谢希仁]()
 2. [MSS百度百科](https://baike.baidu.com/item/MSS/3567802?fr=ge_ala)
