--- a/_posts/2022-07-03-tcp.md
+++ b/_posts/2022-07-03-tcp.md
@@ -73,6 +73,15 @@ description: tcp报文讲起
  
  可以直观地看出，拥塞窗口是指数级快速增大，然后线性增大，直至达到网络拥塞。在达到网络拥塞时，发送者表现就是没有按时收到确认，发送者发生了`超时重传`。
 
+
+ 而对于临界窗口，`ssthresh`值的设定，业界有以下几种看法
+ - [Richard Stevens](https://baike.baidu.com/item/%E7%90%86%E6%9F%A5%E5%BE%B7%C2%B7%E5%8F%B2%E8%92%82%E6%96%87%E6%96%AF/8012278?fr=ge_ala) : 设置为`拥塞窗口值的一半`。
+ - Rfc2581 : 设置为`已发送未确认数据量的一半`。
+ - Westwood : 设置为`已发送已确认数据量的一半`。
+ - Vegas : 根据数据包的RTT（往返时间）动态调整拥塞窗口。
+
+ ps: 假如丢包情况很严重，发出去16个包丢了14个，那么rfc=7，ww=1，显然这时候ww算法更符合实际情况。假如网络丢包不严重，只是偶尔发生一两个丢包，即发出去16个包，丢了2个，rfc=1，ww=7，虽然rfc比较保守，这样做更安全，但是考虑实际情况的话没有什么必要，所以仍然是ww比较合理。
+
 ## 快重传和快恢复
 
 **快重传**
