--- a/_posts/2022-08-10-ip.md
+++ b/_posts/2022-08-10-ip.md
@@ -18,13 +18,17 @@ description: ip网络层
   
   指`IP首部和数据部分之和`的长度，单位是字节。
 
+  `IP协议规定，在因特网中所有的主机和路由器，必须能够接受长度不超过576字节的数据报`。这是假定上层交下来的数据长度有512字节（合理的长度），加上最长的IP首部60字节，再加上4字节的富裕量，就得到576字节。
+
 - 标识
 
-  占16位。IP软件在存储器中维持一个计数器，每产生一个数据报，计数器就加1，并将此值赋给标识字段。`但这个“标识”并不是序号`，因为IP是无连接服务，数据报不存在按序接收的问题。当数据报由于长度超过网络的MTU而必须分片时，这个标识字段的值就被复制到所有的数据报片的标识字段中。相同的标识字段的值使分片后的各数据报片最后能正确地重装成为原来的数据报。
+  占16位。IP软件在存储器中维持一个计数器，每产生一个数据报，计数器就加1，并将此值赋给标识字段。`但这个“标识”并不是序号`，因为IP是无连接服务，数据报不存在按序接收的问题。当数据报由于长度超过网络的MTU而必须分片时，这个标识字段的值就被复制到所有的数据报片的标识字段中。`相同的标识字段的值使分片后的各数据报片最后能正确地重装成为原来的数据报`。
 
 - 片偏移
   
   占13位。片偏移指出：较长的分组在分片后，某片在`原分组中的相对位置`。也就是说，相对于用户数据字段的起点，该片从何处开始。片偏移以`8个字节为偏移单位`。
+  
+  
 
 - 协议
   
