--- a/_posts/2022-08-10-ip.md
+++ b/_posts/2022-08-10-ip.md
@@ -38,6 +38,9 @@ description: ip网络层
   
   <img src="/assets/img/network/ip2.png" width="650"/>
 
+
+小思考: ip网络层发送ip报文时，如果ip报文太长，会拆分ip报文；接收ip报文时，也会相应地整合ip报文后才交付给传输层。
+
 # ARP
 
 已经知道了一个机器（主机或路由器）的IP地址，需要找出其相应的硬件地址。地址解析协议ARP就是用来解决这样的问题的。
