--- a/_posts/2022-08-11-udp.md
+++ b/_posts/2022-08-11-udp.md
@@ -33,5 +33,17 @@ description: udp
   UDP计算检验和的方法和计算IP数据报首部检验和的方法相似。
   但不同的是：`IP数据报的检验和只检验IP数据报的首部，但UDP的检验和是把首部和数据部分一起都检验`。
 
+# udp特点
+- UDP是`无连接的`，即发送数据之前不需要建立连接（当然，发送数据结束时也没有连接可释放），因此减少了开销和发送数据之前的时延。
+- UDP使用尽最大努力交付，即不保证可靠交付，因此主机不需要维持复杂的连接状态表（这里面有许多参数）。
+- UDP是面向报文的。发送方的UDP对应用程序交下来的报文，`在添加首部后就向下交付IP层`。UDP对应用层交下来的报文，既不合并，也不拆分，
+  而是保留这些报文的边界。这就是说，`应用层交给UDP多长的报文，UDP就照样发送`，即一次发送一个报文。
+
+  在接收方的UDP，对IP层交上来的UDP用户数据报，在`去除首部后就原封不动地交付上层的应用进程`。也就是说，`UDP一次交付一个完整的报文`。因此，应用程序必须选择合适大小的报文。若报文太长，UDP把它交给IP层后，IP层在传送时可能要进行分片，这会降低IP层的效率。反之，若报文太短，UDP把它交给IP层后，会使IP数据报的首部的相对长度太大，这也降低了IP层的效率。
+
+- UDP没有拥塞控制。
+- UDP支持一对一、一对多、多对一和多对多的交互通信。
+- UDP的首部开销小，只有8个字节，比TCP的20个字节的首部要短。
+  
 # 参考
 1. [计算机网络 谢希仁]()
