--- a/_posts/2022-08-10-ip.md
+++ b/_posts/2022-08-10-ip.md
@@ -24,6 +24,16 @@ description: ip网络层
 
   占16位。IP软件在存储器中维持一个计数器，每产生一个数据报，计数器就加1，并将此值赋给标识字段。`但这个“标识”并不是序号`，因为IP是无连接服务，数据报不存在按序接收的问题。当数据报由于长度超过网络的MTU而必须分片时，这个标识字段的值就被复制到所有的数据报片的标识字段中。`相同的标识字段的值使分片后的各数据报片最后能正确地重装成为原来的数据报`。
 
+- 标志(flag)
+  占3位，但目前只有两位有意义。
+  - 标志字段中的最低位记为MF (More Fragment)。MF = 1即表示后面“还有分片”的数据报。MF = 0表示这已是若干数据报片中的最后一个。
+  
+  - 标志字段中间的一位记为`DF (Don't Fragment)`，意思是“不能分片”。只有当DF = 0时才允许分片。关于DF，可以看一个例子。
+
+    <img src="/assets/img/network/ip9.jpg" width="550"/>
+  
+    当客户端发给服务器的`巨帧`经过路由器时，`或者被丢包，或者被分片`。这取决于该巨帧是否在`网络层携带了DF（Don't fragment）标志`。如果带了就被丢弃，如果没带就被分片。
+
 - 片偏移
   
   占13位。片偏移指出：较长的分组在分片后，某片在`原分组中的相对位置`。也就是说，相对于用户数据字段的起点，该片从何处开始。片偏移以`8个字节为偏移单位`。
