--- a/_posts/2022-09-10-http2.md
+++ b/_posts/2022-09-10-http2.md
@@ -11,9 +11,18 @@ description: 应用层协议http2
 
 # http2报文结构
 
+<img src="/assets/img/network/http2_1.png" width="950"/>
+上图以`请求头帧`作为切入点(http2定义了10类帧),介绍下其中各个字段的含义。
+
+- Length: 表示帧的数据部分的长度，不含帧头(枕头占9个字节)，即图中红色标注的1，2，3，4共占用的九个字节。Decrypted TLS 面板显示的312个字节
+  减去 帧头的9个字节，正好是303个字节。
+
+- 
+
 
 
 # 参考
 1. [rfc7541](https://www.rfc-editor.org/rfc/rfc7541.html)
 2. [小林coding http2](https://www.xiaolincoding.com/network/2_http/http2.html)
 3. [vivo互联网技术-深入理解 web 协议(三)：http2](https://mp.weixin.qq.com/s/aXZ9OFZUsg-Ax4K5Hocj8Q)
+4. [HTTP/2 中的帧定义](https://halfrost.com/http2-http-frames-definitions/)
