--- a/_posts/2022-09-10-http2.md
+++ b/_posts/2022-09-10-http2.md
@@ -14,10 +14,30 @@ description: 应用层协议http2
 <img src="/assets/img/network/http2_1.png" width="950"/>
 上图以`请求头帧`作为切入点(http2定义了10类帧),介绍下其中各个字段的含义。
 
-- Length: 表示帧的数据部分的长度，不含帧头(枕头占9个字节)，即图中红色标注的1，2，3，4共占用的九个字节。Decrypted TLS 面板显示的312个字节
-  减去 帧头的9个字节，正好是303个字节。
+- Length: 占3个字节，表示帧的数据部分的长度，不含帧头(枕头占9个字节)，即图中红色标注的1，2，3，4共占用的九个字节。Decrypted TLS 面板显示的312个字节减去 帧头的9个字节，正好是303个字节。
 
-- 
+- Type: 占1个字节，共有10类，最主要的是`Http请求头 0x1`，`Http请求包体 0x0`，如下所示:
+  
+  <img src="/assets/img/network/http2_2.png" width="450"/>
+
+- Flags: 占一个字节，如下所示
+
+  <img src="/assets/img/network/http2_3.jpg" width="350"/>
+
+- Stream Identifier: 占4个字节，流标识，见图中红色标注4。
+
+## 特殊header
+特殊的header的name和value都是规范中不常见的，如何编码压缩呢? 见下图示例
+
+<img src="/assets/img/network/http2_4.png" width="950"/>
+
+name为`sec-fetch-site`，在静态表中未被定义，该情况用`01000000`表示，第二个字节的第一个bit为1，剩下的bit联合起来表示name霍夫曼编码
+需要的字节数，第二个字节`10001010`表示name随后需要10个字节编码。
+
+value为`none`，属于自定义字符量，霍夫曼编码需要3个字节。`10000011`中的第一个bit为1表示自定义字符量，剩下的bit联合起来为3表示后续编码
+需要3个字节。
+
+>Tips: 自定义字符量被编码时，如果最后一个字节8个bit未被全部使用到，用1进行填充。
 
 
 
