--- a/_posts/2022-09-10-http2.md
+++ b/_posts/2022-09-10-http2.md
@@ -32,7 +32,7 @@ description: 应用层协议http2
 <img src="/assets/img/network/http2_4.png" width="950"/>
 
 name为`sec-fetch-site`，在静态表中未被定义，该情况用`01000000`表示，第二个字节的第一个bit为1，剩下的bit联合起来表示name霍夫曼编码
-需要的字节数，第二个字节`10001010`表示name随后需要10个字节编码。
+需要的字节数。因此第二个字节`10001010`表示name随后需要10个字节编码。
 
 value为`none`，属于自定义字符量，霍夫曼编码需要3个字节。`10000011`中的第一个bit为1表示自定义字符量，剩下的bit联合起来为3表示后续编码
 需要3个字节。
